--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,23 @@
+:root {
+    --background-dark-color: rgba(83, 48, 189, 0.58);;
+    --background-light-color: #d1c0ff;
+    --button-color: #ea407f;
+    --font-dark-color: #000;
+    --font-light-color: #efefef;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     outline: none;
     border: 0;
     font-family: monospace;
+    color: var(--font-dark-color);
 }
 
 body {
-    background: #d1c0ff;
-    padding: 5vw;
+    background: var(--background-dark-color);
+    padding: 2vw;
 }
 
 main {
@@ -16,7 +25,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1500px;
     text-align: center;
 }   
 
@@ -28,22 +37,22 @@ section {
     justify-content: center;
 }
 
-section#master {
-    flex-direction: column;
-    align-items: center;
+section#master article {
+    min-height: 202px;
 }
 
 section#presets article {
-    min-height: 120px;
+    min-height: 150px;
+    max-width: 100%;
 }
 
 article {
+    background: var(--background-light-color);
     width: 100%;
-    max-width: 392px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #000;
+    border: 1px solid var(--font-dark-color);
     margin: 4px;
     padding: 4px;
 }
@@ -52,25 +61,35 @@ h1, label, button {
     margin: 10px;
 }
 
+h1 {
+    font-size: 22px;
+}
+
 button {
     width: 200px;
     max-width: 100%;
     font-size: 14px;
     padding: 4px;
-    border: 1px solid black;
+    border: 1px solid var(--font-dark-color);
 }
 button:hover:not(:disabled) {
-    background: #ea407f;
-    cursor: pointer;
+    background: var(--button-color);
 }
 
 button.on {
-    background: #ea407f; 
+    background: var(--button-color);
 }
 
 label {
     width: 100%;
     display: block;
+}
+
+input,
+select,
+option,
+button:not(:disabled)  {
+    cursor: pointer;
 }
 
 input[type="range"] {
@@ -81,17 +100,20 @@ input[type="range"] {
 p#preset,
 p#audio-params {
     font-size: 80%;
+    max-width: 100%;
+    overflow-x: auto;
 }
 
 a#download-preset {
-    color: #000;
-    background: #ea407f;
+    color: var(--font-dark-color);
+    background: var(--button-color);
     display: block;
-    margin-top: 4px;
+    margin-top: 8px;
+    font-size: 14px;
 }
 
 a#download-preset:hover {
-    color: #efefef;
+    color: var(--font-light-color);
 }
 
 a#download-preset.hidden {
@@ -106,7 +128,7 @@ article#load-preset label {
 }
 
 article#load-preset label:hover button:not(:disabled){
-    background: #ea407f;
+    background: var(--button-color);
 }
 
 #load-preset-btn {
@@ -122,18 +144,25 @@ article#load-preset label:hover button:not(:disabled){
     cursor: pointer;
 }
 
-input#file-upload-button {
-    width: 100%;
+footer {
+    padding: 8px;
+    text-align: center;
+    color: var(--font-light-color);
 }
 
+footer a {
+    color: var(--font-light-color);
+    font-size: 14px;
+}
+
+article#envelope label {
+    font-size: 12px;
+    margin: 5px;
+}
 
 @media (min-width: 600px) {
     section {
         flex-direction: row;
-    }
- 
-    section#presets article {
-        align-self: flex-start;
     }
 
     p#preset,
