--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ main {
     justify-content: center;
     align-items: center;
     max-width: 1500px;
+    min-height: 100vh;
+    margin: auto;
     text-align: center;
 }   
 
